src/test/deca/context/valid/self/Unary.deca
{
println(-1+3);
println(-1.0+3.0);
}