src/test/deca/context/invalid/self/operationClass.deca
class A {}

{
    A a = new A();
    a=a+a;
}